--- a/E-CommereceBE/Infrastructure/appsettings.json
+++ b/E-CommereceBE/Infrastructure/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=E_Commerce;Username=postgres;Password=1"
+      "DefaultConnection": "Host=localhost;Port=5432;Database=E_Commerce;Username=postgres;Password=1",
+      "MongoDbConnection": "mongodb://localhost:27017/SessionCollection"
+  },
+  "MongoDbSettings":{
+    "DbName":"E-CommereDB"
   },
   "Logging": {
     "LogLevel": {
