--- a/E-CommereceBE/Service/Authentication/Authentication.API/Authentication.API.csproj
+++ b/E-CommereceBE/Service/Authentication/Authentication.API/Authentication.API.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
+    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlock\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
