--- a/E-CommereceBE/Service/Authentication/Authentication.API/Authentication.API.csproj
+++ b/E-CommereceBE/Service/Authentication/Authentication.API/Authentication.API.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UseAppHost>false</UseAppHost>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +14,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuildingBlock\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlock\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Authentication.Application\Authentication.Application.csproj" />
   </ItemGroup>
 
 </Project>
