--- a/E-CommereceBE/Service/Authentication/Authentication.API/appsettings.Development.json
+++ b/E-CommereceBE/Service/Authentication/Authentication.API/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MongoDbConnection": "mongodb://localhost:27017/SessionCollection"
+  },
+  "MongoDbSettings": {
+    "DatabaseName": "E-CommereDB"
   }
 }
